<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Game Backlog</string>
    <string name="second_fragment_label">Add Game</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fabAddGame">navigate to AddGameFragment</string>
    <string name="fabSaveGame">add game to list and navigate to GamesFragment</string>
    <string name="tilGame">Title</string>
    <string name="tilPlatform">Platform</string>
    <string name="tilDay">Day</string>
    <string name="tilMonth">Month</string>
    <string name="tilYear">Year</string>
    <string name="snackbarOnDeleteGame">Successfully deleted game</string>
    <string name="snackbarOnDeleteGames">Successfully deleted all games</string>
    <string name="menuDeleteTitle">Delete All</string>
</resources>